
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2017-02-10 b3rs3rk
	Fix: Settings issues with AniDB population preventing run.
2017-02-10 DariusIII
	Fix: Search by reqid link in predb.tpl (fixes issue #2381)
2017-02-09 niel
	Mrg: dev-base-template-mod branch. See commit 2017-01-18.
	Mrg: PR 2379, from kaibosh - Update sequential scripts for mandatory TPG use.
2017-02-08 niel
	Mrg: dev-mgr (MultiGroup Releases) branch into dev. This adds new feature for matching releases
		spread across several groups.


2017-02-02 niel
	Mrg: PR 2376, from kaibosh - Update threaded.sh for newer fixRelNames params.
2017-01-30 niel
	Fix: Minor changes to XML_Repsonse methods to avoid potential problems.
2017-01-24 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.9.0


2017-01-28 niel
	Fix: Bring in b3s3rk's fix, from MGR branch, for the duplicate ReleasesGroups entries (Closes
		issue 2354).
2017-01-25 DariusIII
	Chg: Replace code in likeSQL function for microseconds speed gain.
	Fix: Wrong number of parameters in removeInstallBin function sql query.
2017-01-24 niel
	Mrg: PR 2366, from kaibosh - Updates to readme.md.
2017-01-23 niel
	Mrg: PR 2364, from krabsheva - Fixes typo in ProcessAdditional.php which prevented timeout
		setting being used correctly.
	Mrg: PR 2365, from krabsheva - Adds releases_groups table to resetdb.php
	Chg: .../misc/testing/DB/resetdb.php now uses loop_cbpm() stored procedure to truncate some
		tables.
2017-01-22 niel
	Fix: Bad settings data for yydecodepath.
2017-01-20 DariusIII
	Fix: Change leftover references to group_id in python scripts and ProcessReleases class.
2017-01-18 niel
	Add: New setting (site.main.incognito) that determines if the main page is shown to vistors, or